# Hudl

./: ALS3.ipynb  Eye_Clustering.ipynb  SVD.ipynb  cluster_data.csv  friend_stats.ipynb  game_premium.ipynb  highlight_length.ipynb  movie_als.ipynb  my_ratings  myratings  public_highlight_recommender.ipynb  public_highlights.ipynb  pujaas_recommender.ipynb  sample_ratings  test_matrix.txt  user_highlight_graph.ipynb  user_highlights.csv  user_rivals.ipynb  wills_recommender.ipynb
Hackathon/: .gitignore  CMakeLists.txt  constants.h  main.cpp
Hackathon/haar_data/: haarcascade_frontalface_alt_tree.xml
Skunkworks/: test.cpp
